--- a/.github/workflows/github_workflow_simplified.yml
+++ b/.github/workflows/github_workflow_simplified.yml
@@ -55,16 +55,16 @@ jobs:
         dotnet-version: ${{env.DOTNET_CORE_VERSION}}
 
     - name: Restore
-      run: dotnet restore MijnWebApi.sln
+      run: dotnet restore ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln
       
     - name: Build
-      run: dotnet build MijnWebApi.sln --no-restore
+      run: dotnet build ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln --no-restore
     
     - name: Test
-      run: dotnet test MijnWebApi.sln --no-build --verbosity normal
+      run: dotnet test ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln --no-build --verbosity normal
     
     - name: Publish
-      run: dotnet publish ${{ secrets.WEBAPI_PROJECT_NAME }} --output ${{env.PUBLISH_DIRECTORY}} --configuration Release 
+      run: dotnet publish ProjectMap/MijnWebApi.WebApi/${{ secrets.WEBAPI_PROJECT_NAME }} --output ${{env.PUBLISH_DIRECTORY}} --configuration Release 
     
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
