--- a/.github/workflows/github_workflow_simplified.yml
+++ b/.github/workflows/github_workflow_simplified.yml
@@ -54,17 +54,17 @@ jobs:
       with:
         dotnet-version: ${{env.DOTNET_CORE_VERSION}}
 
-    - name: Restore
-      run: dotnet restore ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln
+    - name: Restore dependencies
+      run: dotnet restore
       
     - name: Build
-      run: dotnet build ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln --no-restore
+      run: dotnet build --no-restore
     
     - name: Test
-      run: dotnet test ProjectMap/MijnWebApi.WebApi/MijnWebApi.sln --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
     
     - name: Publish
-      run: dotnet publish ProjectMap/MijnWebApi.WebApi/${{ secrets.WEBAPI_PROJECT_NAME }} --output ${{env.PUBLISH_DIRECTORY}} --configuration Release 
+      run: dotnet publish ./${{ secrets.WEBAPI_PROJECT_NAME }} --output ${{env.PUBLISH_DIRECTORY}} --configuration Release 
     
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
@@ -87,6 +87,6 @@ jobs:
     - name: 'Deploy to Azure App Service'
       uses: azure/webapps-deploy@v3
       with: 
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: <publishData><publishProfile profileName="${{secrets.AZURE_WEBAPP_NAME}} - Zip Deploy" publishMethod="ZipDeploy" publishUrl="${{ secrets.AZURE_WEBAPP_NAME }}.scm.azurewebsites.net:443" userName="${{ secrets.AZURE_WEBAPP_PUBLISH_USERNAME }}" userPWD="${{ secrets.AZURE_WEBAPP_PUBLISH_PASSWORD }}" destinationAppUrl="http://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>
         package: '${{ env.PUBLISH_DIRECTORY}}'
