--- a/MijnWebApi.WebApi/MijnWebApi.WebApi.csproj
+++ b/MijnWebApi.WebApi/MijnWebApi.WebApi.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
+    <PackageReference Include="System.Security.Permissions" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
