--- a/.github/workflows/main_avansict2233343.yml
+++ b/.github/workflows/main_avansict2233343.yml
@@ -3,6 +3,11 @@
 
 name: Build and deploy ASP.Net Core app to Azure Web App - avansict2233343
 
+env:
+  ARTIFACT_NAME: .net-app
+  DOTNET_CORE_VERSION: 9.x
+  PUBLISH_DIRECTORY: "myapp"
+
 on:
   push:
     branches:
@@ -10,8 +15,30 @@ on:
   workflow_dispatch:
 
 jobs:
+  check:
+    runs-on: windows-latest
+    steps:
+      - name: "Check if AZUREAPPSERVICE_CLIENTID secret exists"
+        env: 
+          super_secret: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6C2616207D764ADCAF9995C22B6E5DD0 }}
+        if: ${{ env.super_secret == '' }}
+        run: 'echo "Secret AZUREAPPSERVICE_CLIENTID is missing."; exit 1;'
+
+      - name: "Check if AZUREAPPSERVICE_TENANTID secret exists"
+        env: 
+          super_secret: ${{ secrets.AZUREAPPSERVICE_TENANTID_5FC994FFC9D24049AD46E9E8A58A121E }}
+        if: ${{ env.super_secret == '' }}
+        run: 'echo "Secret AZUREAPPSERVICE_TENANTID is missing."; exit 1;'
+
+      - name: "Check if AZUREAPPSERVICE_SUBSCRIPTIONID secret exists"
+        env: 
+          super_secret: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_09DCC5EDA53D4C5E8D8A61BAE34CCCAF }}
+        if: ${{ env.super_secret == '' }}
+        run: 'echo "Secret AZUREAPPSERVICE_SUBSCRIPTIONID is missing."; exit 1;'
+
   build:
     runs-on: windows-latest
+    needs: check
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -21,19 +48,27 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: ${{env.DOTNET_CORE_VERSION}}
+
+      - name: Restore dependencies
+        run: dotnet restore
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Clean publish directory
+        run: |
+          if (Test-Path -Path ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}) { Remove-Item -Recurse -Force ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}} }
+          New-Item -ItemType Directory -Path ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}
+
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o "${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}
 
   deploy:
     runs-on: windows-latest
@@ -46,8 +81,9 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -61,5 +97,4 @@ jobs:
         with:
           app-name: 'avansict2233343'
           slot-name: 'Production'
-          package: .
-          
+          package: ${{runner.temp}}/${{env.PUBLISH_DIRECTORY}}
